--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
 <body>
       <!--main container start-->
        <div class="main-container">
+        <div class="nav-banner">
+        
+        </div>
         <!---Aside Start-->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbox"><i class="fa-solid fa-bars fa-2x" style="color: white;"></i></label>
+        <div class="logo2">
+          <a href="#" style="color: white;"><span style="color: white;">Desi</span>gner</a>
+        </div>
         <div class="aside">
           <div class="logo">
             <a href="#"><span>Desi</span>gner</a>
-            <div class="nav-toggler">
-                <span></span>
-            </div>
           </div>
           <ul class="nav">
-            <li><a href="#home" class="active"> <i class="fa fa-home">Home</i></a></li>
-            <li><a href="#about"> <i class="fa fa-user"></i>About</a></li>
-            <li><a href="#services"> <i class="fa fa-list"></i>Services</a></li>
-            <li><a href="#portfolio"> <i class="fa fa-briefcase"></i>Porfolio</a></li>
-            <li><a href="#contact"> <i class="fa fa-comment"></i>Contact</a></li>
+            <li><a href="#home" class="active"> <i class="fa fa-home"></i>Home</a></li>
+            <li><a href="#about "class="active"> <i class="fa fa-user"></i>About</a></li>
+            <li><a href="#services "class="active"> <i class="fa fa-list"></i>Services</a></li>
+            <li><a href="#portfolio"class="active"> <i class="fa fa-briefcase"></i>Porfolio</a></li>
+            <li><a href="#contact"class="active"> <i class="fa fa-comment"></i>Contact</a></li>
 
           </ul>
         </div>
