--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
     <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
-    <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
-    <link rel="stylesheet" href="css/style-switcher.css">
+    <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled> 
 </head>
 <body>
       <!--main container start-->
@@ -36,11 +35,11 @@
             <a href="#"><span>Desi</span>gner</a>
           </div>
           <ul class="nav">
-            <li><a href="#home" class="active"> <i class="fa fa-home"></i>Home</a></li>
-            <li><a href="#about "class="active"> <i class="fa fa-user"></i>About</a></li>
-            <li><a href="#services "class="active"> <i class="fa fa-list"></i>Services</a></li>
-            <li><a href="#portfolio"class="active"> <i class="fa fa-briefcase"></i>Porfolio</a></li>
-            <li><a href="#contact"class="active"> <i class="fa fa-comment"></i>Contact</a></li>
+            <li><a href="#home" class="active"> <i class="fa fa-home">Home</i></a></li>
+            <li><a href="#about"> <i class="fa fa-user"></i>About</a></li>
+            <li><a href="#services"> <i class="fa fa-list"></i>Services</a></li>
+            <li><a href="#portfolio"> <i class="fa fa-briefcase"></i>Porfolio</a></li>
+            <li><a href="#contact"> <i class="fa fa-comment"></i>Contact</a></li>
 
           </ul>
         </div>
@@ -48,7 +47,7 @@
         <!--Main Content Start-->
         <div class="main-content">
             <!--Start Home Section-->
-            <section id="home">
+          <section id="home">
            <section class="home section">
             <div class="container">
               <div class="row">
