--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#"><span>Desi</span>gner</a>
           </div>
           <ul class="nav">
-            <li><a href="#home" class="active"> <i class="fa fa-home">Home</i></a></li>
+            <li><a href="#home" class="active"> <i class="fa fa-home"></i>Home</a></li>
             <li><a href="#about"> <i class="fa fa-user"></i>About</a></li>
             <li><a href="#services"> <i class="fa fa-list"></i>Services</a></li>
             <li><a href="#portfolio"> <i class="fa fa-briefcase"></i>Porfolio</a></li>
