--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled> 
 </head>
-<body>
+<body oncontextmenu="return false">
       <!--main container start-->
        <div class="main-container">
         <div class="nav-banner">
